Describe your changes here, e.g. add responsive breakpoints and featured card

--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,11 @@
         <div class="container">
             <div class="header__content">
                 <div class="logo">
-                    <h1>Sushant Sharma</h1>
+                    <h1>Acharya Sushant Sharma</h1>
                     <p class="tagline">Astrology Consultant</p>
                 </div>
                 <div class="contact-info">
-                    <p><i class="fas fa-map-marker-alt"></i> Gurah Jattan Ghagwal J&K</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Ghagwal Jatwal J&K</p>
                     <p><i class="fas fa-phone"></i> 9149856750</p>
                 </div>
                 <nav class="nav">
@@ -29,7 +29,7 @@
                         <li><a href="#home">Home</a></li>
                         <li><a href="#services">Services</a></li>
                         <li><a href="#kundali">Kundali</a></li>
-                        <li><a href="#zodiac">Zodiac Signs</a></li>
+                
                         <li><a href="#about">About</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
@@ -58,49 +58,71 @@
             </div>
         </section>
 
-        <!-- Services Section -->
-        <section id="services" class="services">
-            <div class="container">
-                <div class="section-header">
-                    <h2>Our Services</h2>
-                    <p>Discover how the cosmic energies can transform your life</p>
-                </div>
-                <div class="services__grid">
-                    <div class="service-card">
-                        <div class="service-card__icon">
-                            <i class="fas fa-comments"></i>
-                        </div>
-                        <h3>Online Consultation</h3>
-                        <p>Personal one-on-one sessions to address your specific questions and concerns.</p>
-                        <a href="#consultation" class="btn btn--secondary"></a>
-                    </div>
-                    <div class="service-card">
-                        <div class="service-card__icon">
-                            <i class="fas fa-star"></i>
-                        </div>
-                        <h3>Personalized Kundali</h3>
-                        <p>Detailed birth chart analysis based on your exact birth details.</p>
-                        <a href="#kundali" class="btn btn--secondary"></a>
-                    </div>
-                    <div class="service-card">
-                        <div class="service-card__icon">
-                            <i class="fas fa-chart-line"></i>
-                        </div>
-                        <h3>Prediction Reports</h3>
-                        <p>10+ years detailed prediction for career, business, money, health, love & marriage.</p>
-                        <a href="#predictions" class="btn btn--secondary"></a>
-                    </div>
-                    <div class="service-card">
-                        <div class="service-card__icon">
-                            <i class="fas fa-heart"></i>
-                        </div>
-                        <h3>Couple Kundali</h3>
-                        <p>Compatibility analysis and marriage predictions for couples.</p>
-                        
-                    </div>
-                </div>
-            </div>
-        </section>
+       <!-- Services Section -->
+<section id="services" class="services">
+  <div class="container">
+    <div class="section-header">
+      <h2>Our Services</h2>
+      <p>Discover how the cosmic energies can transform your life</p>
+    </div>
+    <div class="services__grid">
+      <!-- existing four cards -->
+      <div class="service-card">
+        <div class="service-card__icon">
+          <i class="fas fa-comments"></i>
+        </div>
+        <h3>Online Consultation</h3>
+        <p>Personal one-on-one sessions to address your specific questions and concerns.</p>
+        <a href="#consultation" class="btn btn--secondary"></a>
+      </div>
+      <div class="service-card">
+        <div class="service-card__icon">
+          <i class="fas fa-star"></i>
+        </div>
+        <h3>Personalized Kundali</h3>
+        <p>Detailed birth chart analysis based on your exact birth details.</p>
+        <a href="#kundali" class="btn btn--secondary"></a>
+      </div>
+      <div class="service-card">
+        <div class="service-card__icon">
+          <i class="fas fa-chart-line"></i>
+        </div>
+        <h3>Prediction Reports</h3>
+        <p>10+ years detailed prediction for career, business, money, health & marriage.</p>
+        <a href="#predictions" class="btn btn--secondary"></a>
+      </div>
+      <div class="service-card">
+        <div class="service-card__icon">
+          <i class="fas fa-heart"></i>
+        </div>
+        <h3>Couple Kundali</h3>
+        <p>Compatibility analysis and marriage predictions for couples.</p>
+        <a href="#couple-kundali" class="btn btn--secondary"></a>
+      </div>
+
+      <!-- new card: Karm Kand (Pujas) -->
+      <div class="service-card">
+        <div class="service-card__icon">
+          <i class="fas fa-praying-hands"></i>
+        </div>
+        <h3>Karm Kand (Pujas)</h3>
+        <p>Conduct sacred rituals and pujas to align cosmic energies and remove obstacles.</p>
+        <a href="#pujas" class="btn btn--secondary"></a>
+      </div>
+
+      <!-- new card: Gemstone & Rudraksh -->
+      <div class="service-card">
+        <div class="service-card__icon">
+          <i class="fas fa-gem"></i>
+        </div>
+        <h3>Gemstone & Rudraksh</h3>
+        <p>Personalized gemstone and rudraksh recommendations based on your birth chart for holistic well-being.</p>
+        <a href="#gemstones" class="btn btn--secondary"></a>
+      </div>
+    </div>
+  </div>
+</section>
+
 
  <!-- Consultation Section -->
 <section id="consultation" class="consultation">
@@ -178,7 +200,7 @@
                     </div>
                     <div class="about__text">
                         <p>Sushant Sharma is a renowned astrologer with extensive knowledge in Vedic astrology, numerology, and vastu shastra. With years of dedicated practice, he has helped thousands of individuals find clarity and direction in their lives.</p>
-                        <p>Based in Gurah Jattan Ghagwal, Jammu & Kashmir, Sushant combines traditional Vedic wisdom with modern approaches to provide practical solutions to life's challenges. His accurate predictions and compassionate guidance have earned him the trust and respect of clients across the country.</p>
+                        <p>Based in Ghagwal Jatwal, Jammu & Kashmir, Sushant combines traditional Vedic wisdom with modern approaches to provide practical solutions to life's challenges. His accurate predictions and compassionate guidance have earned him the trust and respect of clients across the country.</p>
                         <p>Specializing in career guidance, relationship counseling, business predictions, and health analysis, Sushant believes that astrology is not just about predicting the future but empowering individuals to make better choices by understanding the cosmic influences in their lives.</p>
                         <div class="expertise">
                             <h3>Areas of Expertise:</h3>
@@ -209,7 +231,7 @@
                                 <i class="fas fa-map-marker-alt"></i>
                             </div>
                             <h3>Address</h3>
-                            <p>Gurah Jattan Ghagwal J&K</p>
+                            <p>Ghagwal Jatwal J&K</p>
                         </div>
                         <div class="contact__card">
                             <div class="contact__icon">
@@ -223,7 +245,7 @@
                                 <i class="fas fa-envelope"></i>
                             </div>
                             <h3>Email</h3>
-                            <p>contact@sushantsharma.com</p>
+                            <p>astrosushantpandit@gmail.com</p>
                         </div>
                         <div class="contact__card">
                             <div class="contact__icon">
@@ -268,9 +290,9 @@
                 </div>
                 <div class="footer__contact">
                     <h3>Contact Info</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> Gurah Jattan Ghagwal J&K</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Ghagwal Jatwal  J&K</p>
                     <p><i class="fas fa-phone"></i> 9149856750</p>
-                    <p><i class="fas fa-envelope"></i> contact@sushantsharma.com</p>
+                    <p><i class="fas fa-envelope"></i> astrosushantpandit@gmail.com</p>
                 </div>
             </div>
             <div class="footer__bottom">
