--- a/public/index.html
+++ b/public/index.html
@@ -142,9 +142,20 @@
                       <option value="marriage">Marriage & Family Life</option>
                     </select>
                   </div>
+                  <!-- UPDATED: Replaced 'Your Question' with Birth Details -->
+                  <div class="form-row">
+                      <div class="form-group">
+                        <label class="form-label" for="dob">Date of Birth</label>
+                        <input type="date" id="dob" name="dob" class="form-control" required>
+                      </div>
+                      <div class="form-group">
+                        <label class="form-label" for="tob">Time of Birth</label>
+                        <input type="time" id="tob" name="tob" class="form-control" required>
+                      </div>
+                  </div>
                   <div class="form-group">
-                    <label class="form-label" for="question">Your Question</label>
-                    <textarea id="question" name="question" class="form-control" rows="4" required></textarea>
+                    <label class="form-label" for="pob">Place of Birth</label>
+                    <input type="text" id="pob" name="pob" class="form-control" placeholder="e.g., Jammu, India" required>
                   </div>
                   <button type="submit" class="btn btn--primary btn--full-width">Book Consultation</button>
                 </form>
